add extra reference links

--- a/project/templates/projects/add_project.html
+++ b/project/templates/projects/add_project.html
@@ -68,9 +68,23 @@
                         {{form.skills}}
                     </div>
                 </div>
-                <div class="mb-3">
-                    {{form.ref_link.label_tag}}
-                    {{form.ref_link}}
+                <div class="mb-3" >
+                    
+                    <div class="row mb-2">
+                        <div class="col-11">
+                            <input type="text" name="ref_link" placeholder="add project reference links" class="form-control" >
+                        </div>
+                        <div class="col-1">
+                            <button class="btn btn-primary" onclick="addRefBox()">Add</button>
+                        </div>
+                        <div id="emailHelp" class="form-text">Add another project reference links</div>
+                        
+                    </div>
+                    <!-- {{form.ref_link.label_tag}}
+                    {{form.ref_link}} -->
+                </div>
+                <div id="extra_ref_box">
+
                 </div>
                 <div class="mb-3">
                     <!-- {{form.description.label_tag}}
@@ -84,6 +98,31 @@
     </div>
 
 </div>
+
+<script>
+    let extra_ref_box = document.getElementById("extra_ref_box");
+    let current_ref_link = 0;
+    const addRefBox = ()=>{
+        console.log("Add box")
+        let element = `
+        <div class="row mb-2" id=current_ref_link${current_ref_link}>
+                        <div class="col-11">
+                            <input type="text" name="ref_link" placeholder="add project reference links" class="form-control" >
+                        </div>
+                        <div class="col-1">
+                            <button class="btn btn-danger" onclick="removeRefBox(${current_ref_link})">Del</button>
+                        </div>
+                        
+                    </div>
+                    `;
+        extra_ref_box.innerHTML += element;
+        current_ref_link +=1
+    }
+    const removeRefBox = (ref_link_id)=>{
+        let element = document.getElementById(`current_ref_link${ref_link_id}`);
+        element.remove();
+    }
+</script>
 
 
 {% endblock main_content %}
