--- a/project/templates/projects/index.html
+++ b/project/templates/projects/index.html
@@ -76,7 +76,11 @@
                     <th scope="row">{{forloop.counter}}</th>
                     <td>{{project.project_name}}</td>
                     <td>${{project.budget}}</td>
-                    <td>{{project.progress}}</td>
+                    <td>
+                      <div class="progress">
+                        <div class="progress-bar bg-warning" role="progressbar" style="width: {{project.progress}}%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                      </div>
+                    </td>
                     <td>{{project.technology}}</td>
                     <td>{{project.company}}</td>
                     <td>{{project.start_date}}</td>
