--- a/project/templates/projects/index.html
+++ b/project/templates/projects/index.html
@@ -66,6 +66,7 @@
                 <th scope="col">Technology</th>
                 <th scope="col">Company</th>
                 <th scope="col">Start Date</th>
+                <th scope="col">End Date</th>
                 <!-- <th scope="col">End Date</th> -->
                 
               </tr>
@@ -84,6 +85,7 @@
                     <td>{{project.technology}}</td>
                     <td>{{project.company}}</td>
                     <td>{{project.start_date}}</td>
+                    <td>{{project.end_date}}</td>
 
                   </tr>
                 {% endfor %}
